# dazbo-portfolio

./: .env  .env.enc  .env.template  .envrc  .gitattributes  .gitignore  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  TODO.md  dazbo_prompt.enc  manual_applications.yaml  package-lock.json  pyproject.toml  signature.txt  verify_devto.py
.agents/skills/refresh-portfolio/: SKILL.md
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
.github/workflows/: gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  portfolio-sync.yml
app/: __init__.py  agent.py  config.py  dependencies.py  fast_api_app.py  seo_constants.py
app/app_utils/: gcs.py  telemetry.py  typing.py
app/models/: application.py  blog.py  content.py  experience.py  project.py  video.py
app/services/: application_service.py  blog_service.py  content_enrichment_service.py  content_service.py  experience_service.py  firestore.py  firestore_base.py  project_service.py  session_service.py  simulated_service.py  video_service.py
app/services/connectors/: devto_connector.py  github_connector.py  medium_connector.py  (+1 more)
app/tools/: content_details.py  ingest.py  portfolio_search.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
deployment/: README.md
deployment/terraform/: apis.tf  backend.tf  build_triggers.tf  github.tf  iam.tf  locals.tf  out.tfplan  providers.tf  scheduler.tf  secrets.tf  service.tf  service_accounts.tf  storage.tf  telemetry.tf  variables.tf
docs/: DESIGN.md  architecture-and-walkthrough.md  blog_migration_journey.md  design-and-walkthrough.md  firestore_mcp_schema_issue.md  testing.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  types.ts
notebooks/: adk_app_testing.ipynb
sample_data/: dazbo_about.md.enc  dazbo_prompt.md.enc  manual_applications.yaml.enc  manual_videos.yaml  manual_videos.yaml.enc
scripts/: setup-env.sh  test_mcp_bug.py
tests/integration/: test_agent.py  test_chat_endpoint.py  test_endpoints.py  test_fast_api_app.py  test_firestore_mcp_agent.py  test_ingest_e2e.py  test_prompt_injection.py  test_rate_limiting.py  test_server_e2e.py  test_sitemap_endpoint.py
tests/load_test/: load_test.py
tests/unit/: test_admin_refresh.py  test_agent_config.py  test_application_endpoints.py  test_application_service.py  test_blog_sorting.py  test_content_enrichment_service.py  test_content_service.py  test_devto_connector.py  test_experience_sorting.py  test_firestore_base.py  test_firestore_sitemap.py  test_gcs.py  test_get_content_details_tool.py  test_github_connector.py  test_github_connector_forks.py  test_ingest_about.py  test_ingest_applications.py  test_ingest_cli.py  test_ingest_hybrid.py  test_ingest_videos.py  test_ingest_videos_sync.py  test_ingest_yaml.py  test_ingestion_refinement.py  test_medium_archive_connector.py  test_medium_connector.py  test_models.py  test_models_ingestion.py  test_project_sorting.py  test_search_portfolio_tool.py  test_security_traversal.py  test_seo_injection.py  test_services.py  test_session_dependency.py  test_session_service.py  test_tool_content_details_security.py  test_video_model.py  test_video_service.py
(+135 files in other folders)
